force-app/main/core/objects/Account/Account.object-meta.xml
<CustomObject>
    <sharingModel>Private</sharingModel>
</CustomObject>