force-app/main/core/objects/Account/fields/Account_Link__c.field-meta.xml
<CustomField>
    <fullName>Account_Link__c</fullName>
    <formula>HYPERLINK($Setup.Noda_Custom_Settings__c.Org_URL__c+&quot;lightning/r/Account/&quot;+Id+&quot;/view&quot; , Name )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Account</label>
    <type>Text</type>
</CustomField>