force-app/main/core/objects/Account/fields/Bank_Account__c.field-meta.xml
<CustomField>
    <fullName>Bank_Account__c</fullName>
    <label>Bank Account</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Merchant’s C2B</fullName>
            </value>
            <value>
                <fullName>Noda’s C2B</fullName>
            </value>
            <value>
                <fullName>Bild Noda</fullName>
            </value>
            <value>
                <fullName>TBC</fullName>
            </value>
            <value>
                <fullName>IFX</fullName>
            </value>
            <value>
                <fullName>Bild Merchant</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>