force-app/main/core/objects/Account/fields/Cards__c.field-meta.xml
<CustomField>
    <fullName>Cards__c</fullName>
    <label>Cards</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Opportunity_Status</valueSetName>
    </valueSet>
</CustomField>