force-app/main/core/objects/Account/fields/Channel_Name__c.field-meta.xml
<CustomField>
    <fullName>Channel_Name__c</fullName>
    <label>Channel Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>