force-app/main/core/objects/Account/fields/Company_Size__c.field-meta.xml
<CustomField>
    <fullName>Company_Size__c</fullName>
    <label>Company Size</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>&lt; 100k</fullName>
            </value>
            <value>
                <fullName>&gt; 100k</fullName>
            </value>
            <value>
                <fullName>&gt; 300k</fullName>
            </value>
            <value>
                <fullName>&gt; 500k</fullName>
            </value>
            <value>
                <fullName>&gt; 1m</fullName>
            </value>
            <value>
                <fullName>&gt; 10m</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>