force-app/main/core/objects/Account/fields/Conferences__c.field-meta.xml
<CustomField>
    <fullName>Conferences__c</fullName>
    <label>Conferences</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>AccountSource</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>ICE</fullName>
            </value>
            <value>
                <fullName>Sigma</fullName>
            </value>
            <value>
                <fullName>SiGMA CIS</fullName>
            </value>
            <value>
                <fullName>Sigma Malta</fullName>
            </value>
            <value>
                <fullName>SiGMA Europe</fullName>
            </value>
            <value>
                <fullName>SiGMA Eurasia</fullName>
            </value>
            <value>
                <fullName>iGB</fullName>
            </value>
            <value>
                <fullName>Money</fullName>
            </value>
            <value>
                <fullName>SBC</fullName>
            </value>
            <value>
                <fullName>TES</fullName>
            </value>
            <value>
                <fullName>TES Sitges</fullName>
            </value>
            <value>
                <fullName>TES Prague</fullName>
            </value>
            <value>
                <fullName>ICE London</fullName>
            </value>
            <value>
                <fullName>FITUR</fullName>
            </value>
            <value>
                <fullName>WTM</fullName>
            </value>
            <value>
                <fullName>The Travel Convention by ABTA 2022</fullName>
            </value>
            <value>
                <fullName>eTail UK</fullName>
            </value>
            <value>
                <fullName>TechChill</fullName>
            </value>
            <value>
                <fullName>iGaming Germany</fullName>
            </value>
            <value>
                <fullName>Canadian Gaming Summit</fullName>
            </value>
            <value>
                <fullName>Brazilian iGaming Summit</fullName>
            </value>
            <value>
                <fullName>Bet Expo</fullName>
            </value>
            <value>
                <fullName>Gamescom</fullName>
            </value>
            <value>
                <fullName>ITB Berlin</fullName>
            </value>
            <value>
                <fullName>Payments solutions for the travel industry</fullName>
            </value>
            <value>
                <fullName>Casino Beats Summit</fullName>
            </value>
            <value>
                <fullName>Internet Retailing Expo</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>TES 2022</fullName>
                <isActive>false</isActive>
                <label>TES 2022</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>