force-app/main/core/objects/Account/fields/Integration_Type__c.field-meta.xml
<CustomField>
    <fullName>Integration_Type__c</fullName>
    <label>Integration Type</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Noda</fullName>
            </value>
            <value>
                <fullName>WooCommerce</fullName>
            </value>
            <value>
                <fullName>OpenCart</fullName>
            </value>
            <value>
                <fullName>BigCommerce</fullName>
            </value>
            <value>
                <fullName>Magento</fullName>
            </value>
            <value>
                <fullName>PrestaShop</fullName>
            </value>
            <value>
                <fullName>Tilda</fullName>
            </value>
            <value>
                <fullName>Ecwid</fullName>
            </value>
            <value>
                <fullName>Shopify</fullName>
            </value>
            <value>
                <fullName>Devcode</fullName>
            </value>
            <value>
                <fullName>Praxis</fullName>
            </value>
            <value>
                <fullName>Other (Specify)</fullName>
            </value>
            <value>
                <fullName>Classic API</fullName>
            </value>
            <value>
                <fullName>MinUX api</fullName>
            </value>
            <value>
                <fullName>Direct</fullName>
                <isActive>false</isActive>
                <label>Direct</label>
            </value>
            <value>
                <fullName>Noda Buffet</fullName>
                <isActive>false</isActive>
                <label>Noda Buffet</label>
            </value>
            <value>
                <fullName>Woo</fullName>
                <isActive>false</isActive>
                <label>Woo</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>