force-app/main/core/objects/Account/fields/Integration_Type_Code__c.field-meta.xml
<CustomField>
    <fullName>Integration_Type_Code__c</fullName>
    <formula>IF ( INCLUDES ( Integration_Type__c, &quot;Noda&quot; ), &quot;NODA; &quot;,null ) &amp;
IF ( INCLUDES ( Integration_Type__c , &quot;WooCommerce&quot; ), &quot;WOCM; &quot;,null ) &amp;
IF ( INCLUDES ( Integration_Type__c , &quot;OpenCart&quot; ), &quot;OPCD; &quot;,null ) &amp;
IF ( INCLUDES ( Integration_Type__c , &quot;BigCommerce&quot; ), &quot;BGCM; &quot;,null ) &amp;
IF ( INCLUDES ( Integration_Type__c , &quot;Magento&quot; ), &quot;MGNT; &quot;,null ) &amp;
IF ( INCLUDES ( Integration_Type__c , &quot;PrestaShop&quot; ), &quot;PTSH; &quot;,null ) &amp;
IF ( INCLUDES ( Integration_Type__c , &quot;Tilda&quot; ), &quot;TILD; &quot;,null ) &amp;
IF ( INCLUDES ( Integration_Type__c , &quot;Ecwid&quot; ), &quot;ECWD; &quot;,null ) &amp;
IF ( INCLUDES ( Integration_Type__c , &quot;Shopify&quot; ), &quot;SHPF; &quot;,null ) &amp;
IF ( INCLUDES ( Integration_Type__c , &quot;Devcode&quot; ), &quot;PMLK; &quot;,null ) &amp;
IF ( INCLUDES ( Integration_Type__c , &quot;Praxis&quot; ), &quot;PRXS; &quot;,null ) &amp;
IF ( INCLUDES ( Integration_Type__c , &quot;Other (specify)&quot; ), &quot;OTHR; &quot;,null )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Integration Type Code</label>
    <type>Text</type>
</CustomField>