force-app/main/core/objects/Account/fields/KYW__c.field-meta.xml
<CustomField>
    <fullName>KYW__c</fullName>
    <label>KYW</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Opportunity_Status</valueSetName>
    </valueSet>
</CustomField>