force-app/main/core/objects/Account/fields/New_Comment__c.field-meta.xml
<CustomField>
    <fullName>New_Comment__c</fullName>
    <label>New comment</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>