force-app/main/core/objects/Account/fields/Noda_Buffet__c.field-meta.xml
<CustomField>
    <fullName>Noda_Buffet__c</fullName>
    <label>Noda Buffet</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Opportunity_Status</valueSetName>
    </valueSet>
</CustomField>