force-app/main/core/objects/Account/fields/Noda_Go__c.field-meta.xml
<CustomField>
    <fullName>Noda_Go__c</fullName>
    <label>Noda Go</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Opportunity_Status</valueSetName>
    </valueSet>
</CustomField>