force-app/main/core/objects/Account/fields/OtherWebsites__c.field-meta.xml
<CustomField>
    <fullName>OtherWebsites__c</fullName>
    <label>Other Websites</label>
    <type>TextArea</type>
</CustomField>