force-app/main/core/objects/Account/fields/OwnerFullName__c.field-meta.xml
<CustomField>
    <fullName>OwnerFullName__c</fullName>
    <formula>Owner.FirstName + &quot; &quot; + Owner.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Owner full name</label>
    <type>Text</type>
</CustomField>