force-app/main/core/objects/Account/fields/Pay_In__c.field-meta.xml
<CustomField>
    <fullName>Pay_In__c</fullName>
    <label>Pay In</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Opportunity_Status</valueSetName>
    </valueSet>
</CustomField>