force-app/main/core/objects/Account/fields/Payment_links__c.field-meta.xml
<CustomField>
    <fullName>Payment_links__c</fullName>
    <label>Payment links</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Opportunity_Status</valueSetName>
    </valueSet>
</CustomField>