force-app/main/core/objects/Account/fields/Previous_comment__c.field-meta.xml
<CustomField>
    <fullName>Previous_comment__c</fullName>
    <label>Previous comment</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>