force-app/main/core/objects/Account/fields/Previous_owner__c.field-meta.xml
<CustomField>
    <fullName>Previous_owner__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Previous owner</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Accounts</relationshipName>
    <type>Lookup</type>
</CustomField>