force-app/main/core/objects/Account/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Not in live</fullName>
                <default>true</default>
                <label>Not in live</label>
            </value>
            <value>
                <fullName>Onboarding</fullName>
            </value>
            <value>
                <fullName>Agreement</fullName>
            </value>
            <value>
                <fullName>Compliance</fullName>
            </value>
            <value>
                <fullName>Integration</fullName>
            </value>
            <value>
                <fullName>Done</fullName>
            </value>
            <value>
                <fullName>Blocked</fullName>
                <color>#FF0000</color>
                <label>Blocked</label>
            </value>
            <value>
                <fullName>Closed lost</fullName>
                <color>#FF0000</color>
                <label>Closed lost</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>