force-app/main/core/objects/Account/fields/Trusted_Payments__c.field-meta.xml
<CustomField>
    <fullName>Trusted_Payments__c</fullName>
    <label>Trusted Payments</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Opportunity_Status</valueSetName>
    </valueSet>
</CustomField>